package Enum;

public enum PaymentMethod {
Online,
Physical_card,
Physical_cash
}
