package Enum;

public enum SuitType {
    Standard,
    Luxury

}
